--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,20 @@
 {
 
     "require" : {
+        "pimple/pimple"   : "~3.0",
+        "monolog/monolog" : "1.10.*"
+    },
+
+    "suggest" : {
         "mandrill/mandrill" : "1.0.*",
-        "monolog/monolog"   : "1.10.*"
+        "aws/aws-sdk-php" : "2.6.*"
     },
 
 
     "require-dev" : {
-        "phpunit/phpunit" : "4.*"
+        "phpunit/phpunit" : "4.*",
+        "aws/aws-sdk-php" : "2.6.*"
+        
     },
 
     "autoload" : {
